update: Tests